--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -106,7 +106,9 @@
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\", instance=\"INSTANCE_CRN\", token=\"YOUR_API_KEY\"\n",
+    "    channel=\"ibm_quantum_platform\",\n",
+    "    instance=\"INSTANCE_CRN\",\n",
+    "    token=\"YOUR_API_KEY\",\n",
     ")"
    ]
   },
