--- a/docs/tutorials/error-mitigation-with-qiskit-functions.ipynb
+++ b/docs/tutorials/error-mitigation-with-qiskit-functions.ipynb
@@ -321,7 +321,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalog = QiskitFunctionsCatalog(token=\"<YOUR_API_KEY>\") # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
+    "catalog = QiskitFunctionsCatalog(\n",
+    "    token=\"<YOUR_API_KEY>\"\n",
+    ")  # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
     "function = catalog.load(\"ibm/circuit-function\")"
    ]
   },
