--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -142,7 +142,7 @@
     "catalog = QiskitFunctionsCatalog(\n",
     "    channel=\"ibm_quantum_platform\",\n",
     "    instance=\"INSTANCE_CRN\",\n",
-    "    token=\"YOUR_API_KEY\" # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
+    "    token=\"YOUR_API_KEY\",  # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
     ")\n",
     "\n",
     "# Load your function\n",
