--- a/docs/guides/qunova-chemistry.ipynb
+++ b/docs/guides/qunova-chemistry.ipynb
@@ -125,7 +125,7 @@
     "catalog = QiskitFunctionsCatalog(\n",
     "    channel=\"ibm_quantum_platform\",\n",
     "    instance=\"INSTANCE_CRN\",\n",
-    "    token=\"YOUR_API_KEY\" # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
+    "    token=\"YOUR_API_KEY\",  # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
     ")\n",
     "\n",
     "function = catalog.load(\"qunova/hivqe-chemistry\")"
