Consolidate initialization information (#3885)
Closes #3833 
Closes #3957 

Major changes are in these files:

https://qiskit.github.io/documentation/pr-3885/docs/guides/cloud-setup

https://qiskit.github.io/documentation/pr-3885/docs/guides/cloud-setup-invited

https://qiskit.github.io/documentation/pr-3885/docs/guides/save-credentials

https://qiskit.github.io/documentation/pr-3885/docs/guides/initialize-account
https://qiskit.github.io/documentation/pr-3885/docs/guides/instances

https://qiskit.github.io/documentation/pr-3885/docs/guides/save-credentials

---------

Co-authored-by: abbycross <across@us.ibm.com>
Co-authored-by: Elena Peña Tapia <57907331+ElePT@users.noreply.github.com>

--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -140,7 +140,9 @@
     "tem_function_name = \"algorithmiq/tem\"\n",
     "\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_quantum_platform\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
+    "    channel=\"ibm_quantum_platform\",\n",
+    "    instance=\"INSTANCE_CRN\",\n",
+    "    token=\"YOUR_API_KEY\",  # Use the 44-character API_KEY you created and saved from the IBM Quantum Platform Home dashboard\n",
     ")\n",
     "\n",
     "# Load your function\n",
