--- a/docs/tutorials/compilation-methods-for-hamiltonian-simulation-circuits.ipynb
+++ b/docs/tutorials/compilation-methods-for-hamiltonian-simulation-circuits.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c1ce1ad9-d529-49a1-91df-b540603ceb88",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "# QiskitRuntimeService.save_account(channel=\"ibm_quantum_platform\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
+    "# QiskitRuntimeService.save_account(channel=\"ibm_quantum_platform\", token=\"<YOUR-API-KEY>\", overwrite=True, set_as_default=True)\n",
     "service = QiskitRuntimeService(channel=\"ibm_quantum_platform\")\n",
     "backend = service.backend(\"ibm_torino\")\n",
     "print(f\"Using backend: {backend}\")"
@@ -1549,7 +1549,7 @@
     "\n",
     "While the AI transpiler generally delivers better results than SABRE, particularly in circuit depth, the takeaway should not simply be \"always use the AI transpiler.\" There are important nuances to consider:\n",
     "\n",
-    "- **AI transpiler** is typically reliable and provides depth-optimized circuits, but it comes with trade-offs in runtime, and also has other limitations, including supported coupling maps and synthesis capabilities. These are detailed in the [Qiskit Transpiler Service documentation](https://quantum.cloud.ibm.com/docs/en/guides/qiskit-transpiler-service).\n",
+    "- **AI transpiler** is typically reliable and provides depth-optimized circuits, but it comes with trade-offs in runtime, and also has other limitations, including supported coupling maps and synthesis capabilities. These are detailed in the [Qiskit Transpiler Service documentation](https://quantum.cloud.ibm.com/docs/guides/qiskit-transpiler-service).\n",
     "\n",
     "- In some cases, particularly with very large or hardware-specific circuits, the AI transpiler may not be as effective. In these cases, the default SABRE transpiler remains extremely reliable and can be further optimized by adjusting its parameters (see the [SABRE optimization tutorial](https://quantum.cloud.ibm.com/docs/tutorials/transpilation-optimizations-with-sabre)).\n",
     "\n",
