--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -37,36 +37,36 @@
    "id": "435ec827-a348-4b70-b1ef-582849c0a76a",
    "metadata": {},
    "source": [
-    "Local testing mode (available with `qiskit-ibm-runtime` v0.22.0 or later) can be used to help develop and test programs before fine-tuning them and sending them to real quantum hardware.  After using local testing mode to verify your program, all you need to change is the backend name to run it on a QPU.\n",
+    "Use local testing mode (available with `qiskit-ibm-runtime` v0.22.0 or later) to test programs before fine-tuning them and sending them to real quantum hardware.  After using local testing mode to verify your program, all you need to change is the backend name to run it on a QPU.\n",
     "\n",
     "To use local testing mode, specify one of the fake backends from ``qiskit_ibm_runtime.fake_provider`` or specify a Qiskit Aer backend when instantiating a Qiskit Runtime primitive or a session.\n",
     "\n",
     "- **Fake backends**: The [fake backends](/docs/api/qiskit-ibm-runtime/fake-provider)  in ``qiskit_ibm_runtime.fake_provider`` mimic the behaviors of IBM&reg; QPUs by using QPU snapshots. The QPU snapshots contain important information about the QPU, such as the coupling map, basis gates, and qubit properties, which are useful for testing the transpiler and performing noisy simulations of the QPU. The noise model from the snapshot is automatically applied during simulation.\n",
-    "- **Aer simulator**: Simulators from [Qiskit Aer](simulate-with-qiskit-aer) provide higher-performance simulation that can handle larger circuits and [custom noise models](/docs/guides/build-noise-models). It also supports Clifford simulation mode, which can efficiently simulate Clifford circuits with a large number of qubits.\n",
+    "- **Aer simulator**: Simulators from [Qiskit Aer](/docs/guides/simulate-with-qiskit-aer) provide higher-performance simulation that can handle larger circuits and [custom noise models](/docs/guides/build-noise-models). A list of simulation method options are available when you use `AerSimulator` in local testing mode. See the [Clifford simulation mode example](#clifford-sim), which demonstrates how to efficiently simulate Clifford circuits with a large number of qubits.\n",
     "\n",
-    "<details>\n",
-    "<summary>List of simulation methods available from Qiskit Aer</summary>\n",
+    "    <details>\n",
+    "    <summary>**List of simulation methods available from Qiskit Aer**</summary>\n",
     "\n",
-    "See the [`AerSimulator`](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator) documentation for more information.\n",
+    "    See the [`AerSimulator`](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator) documentation for more information.\n",
     "\n",
-    "* ``\"automatic\"``: Default simulation method. Select the simulation method automatically based on the circuit and noise model.\n",
+    "    * ``\"automatic\"``: Default simulation method. Select the simulation method automatically based on the circuit and noise model.\n",
     "\n",
-    "* ``\"statevector\"``: A dense statevector simulation that can sample measurement outcomes from *ideal* circuits with all measurements at end of the circuit. For noisy simulations each shot samples a randomly sampled noisy circuit from the noise model.\n",
+    "    * ``\"statevector\"``: A dense statevector simulation that can sample measurement outcomes from *ideal* circuits with all measurements at end of the circuit. For noisy simulations each shot samples a randomly sampled noisy circuit from the noise model.\n",
     "\n",
-    "* ``\"density_matrix\"``: A dense density matrix simulation that may sample measurement outcomes from *noisy* circuits with all measurements at end of the circuit.\n",
+    "    * ``\"density_matrix\"``: A dense density matrix simulation that may sample measurement outcomes from *noisy* circuits with all measurements at end of the circuit.\n",
     "\n",
-    "* ``\"stabilizer\"``: An efficient Clifford stabilizer state simulator that can simulate noisy Clifford circuits if all errors in the noise model are also Clifford errors.\n",
+    "    * ``\"stabilizer\"``: An efficient Clifford stabilizer state simulator that can simulate noisy Clifford circuits if all errors in the noise model are also Clifford errors.\n",
     "\n",
-    "* ``\"extended_stabilizer\"``: An approximate simulated for Clifford + T circuits based on a state decomposition into ranked-stabilizer state. The number of terms grows with the number of non-Clifford (T) gates.\n",
+    "    * ``\"extended_stabilizer\"``: An approximate simulated for Clifford + T circuits based on a state decomposition into ranked-stabilizer state. The number of terms grows with the number of non-Clifford (T) gates.\n",
     "\n",
-    "* ``\"matrix_product_state\"``: A tensor-network statevector simulator that uses a Matrix Product State (MPS) representation for the state. This can be done either with or without truncation of the MPS bond dimensions depending on the simulator options. The default behavior is no truncation.\n",
+    "    * ``\"matrix_product_state\"``: A tensor-network statevector simulator that uses a Matrix Product State (MPS) representation for the state. This can be done either with or without truncation of the MPS bond dimensions depending on the simulator options. The default behavior is no truncation.\n",
     "\n",
-    "* ``\"unitary\"``: A dense unitary matrix simulation of an ideal circuit. This simulates the unitary matrix of the circuit itself rather than the evolution of an initial quantum state. This method can only simulate gates, it does not support measurement, reset, or noise.\n",
+    "    * ``\"unitary\"``: A dense unitary matrix simulation of an ideal circuit. This simulates the unitary matrix of the circuit itself rather than the evolution of an initial quantum state. This method can only simulate gates, it does not support measurement, reset, or noise.\n",
     "\n",
-    "* ``\"superop\"``: A dense superoperator matrix simulation of an ideal or noisy circuit. This simulates the superoperator matrix of the circuit itself rather than the evolution of an initial quantum state. This method can simulate ideal and noisy gates, and reset, but does not support measurement.\n",
+    "    * ``\"superop\"``: A dense superoperator matrix simulation of an ideal or noisy circuit. This simulates the superoperator matrix of the circuit itself rather than the evolution of an initial quantum state. This method can simulate ideal and noisy gates, and reset, but does not support measurement.\n",
     "\n",
-    "* ``\"tensor_network\"``: A tensor-network based simulation that supports both statevector and density matrix. Currently there is only available for GPU and accelerated by using cuTensorNet APIs of cuQuantum.\n",
-    "</details>\n",
+    "    * ``\"tensor_network\"``: A tensor-network based simulation that supports both statevector and density matrix. Currently there is only available for GPU and accelerated by using cuTensorNet APIs of cuQuantum.\n",
+    "    </details>\n",
     "\n",
     "\n",
     "<Admonition type=\"note\" title=\"Notes\">\n",
@@ -235,7 +235,7 @@
     "    size=circuit.num_parameters,\n",
     ")\n",
     "\n",
-    "# Tell Aer to use the stabilizer (clifford) simulation method\n",
+    "# Tell Aer to use the stabilizer (Clifford) simulation method\n",
     "aer_sim = AerSimulator(method=\"stabilizer\")\n",
     "\n",
     "pm = generate_preset_pass_manager(backend=aer_sim, optimization_level=1)\n",
