--- a/docs/guides/simulate-with-qiskit-aer.ipynb
+++ b/docs/guides/simulate-with-qiskit-aer.ipynb
@@ -35,11 +35,12 @@
    "id": "6a0ae8b1-b413-44ac-9267-fd36345a02df",
    "metadata": {},
    "source": [
-    "[Exact simulation with Qiskit primitives](./simulate-with-qiskit-sdk-primitives) demonstrates how to use the reference primitives included with Qiskit to perform exact simulation of quantum circuits. Currently existing quantum processors suffer from errors, or noise, so the results of an exact simulation do not necessarily reflect the results you would expect when running circuits on real hardware. While the reference primitives in Qiskit do not support modeling noise, [Qiskit Aer](https://qiskit.org/ecosystem/aer/) includes implementations of the primitives that do support modeling noise. Qiskit Aer is a high-performance quantum circuit simulator that you can use in place of the reference primitives for better performance and more features. It is part of the [Qiskit Ecosystem](https://qiskit.github.io/ecosystem/). In this article, we demonstrate the use of Qiskit Aer primitives for exact and noisy simulation.\n",
+    "[Exact simulation with Qiskit primitives](/docs/guides/simulate-with-qiskit-sdk-primitives) demonstrates how to use the reference primitives included with Qiskit to perform exact simulation of quantum circuits. Currently existing quantum processors suffer from errors, or noise, so the results of an exact simulation do not necessarily reflect the results you would expect when running circuits on real hardware. While the reference primitives in Qiskit do not support modeling noise, [Qiskit Aer](https://qiskit.org/ecosystem/aer/) includes implementations of the primitives that do support modeling noise. Qiskit Aer is a high-performance quantum circuit simulator that you can use in place of the reference primitives for better performance and more features. It is part of the [Qiskit Ecosystem](https://qiskit.github.io/ecosystem/). In this article, we demonstrate the use of Qiskit Aer primitives for exact and noisy simulation.\n",
     "\n",
     "<Admonition type=\"note\" title=\"Notes\">\n",
-    "- `qiskit-aer` 0.14 or later is required.\n",
+    "- `qiskit-aer` v0.14 or later is required.\n",
     "- While Qiskit Aer primitives implement the primitive interfaces, they do not provide the same options as Qiskit Runtime primitives. Resilience level, for example, is not available with Qiskit Aer primitives.\n",
+    "- See the [AerSimulator documentation](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator) for details on the simulation method options that Aer supports. \n",
     "</Admonition>\n",
     "\n",
     "To explore exact and noisy simulation, create an example circuit on eight qubits:"
@@ -277,9 +278,9 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  - To simulate small, simple circuits, see [Exact simulation with Qiskit primitives](./simulate-with-qiskit-sdk-primitives).\n",
-    "  - Review the [Qiskit Aer](https://qiskit.org/ecosystem/aer/) documentation.\n",
-    "  - Learn how to run on a quantum processor in the [Execute on hardware](./execute-on-hardware) step of the Qiskit patterns workflow.\n",
+    "  - To simulate small, simple circuits, see [Exact simulation with Qiskit primitives](/docs/guides/simulate-with-qiskit-sdk-primitives).\n",
+    "  - Review the [Qiskit Aer](https://qiskit.github.io/qiskit-aer/) documentation.\n",
+    "  - Learn how to run on a quantum processor in the [Execute on hardware](/docs/guides/execute-on-hardware) step of the Qiskit patterns workflow.\n",
     "</Admonition>"
    ]
   }
