--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -5,6 +5,8 @@
    "id": "c08a245a-82c1-4c6f-b1e1-d0a27f093b7a",
    "metadata": {},
    "source": [
+    "{/* cspell:ignore superop */}\n",
+    "\n",
     "<span id=\"test-locally\"></span>\n",
     "# Qiskit Runtime local testing mode"
    ]
